Fix prince-trim (must >= prince-bleed)

--- a/css/print_no-crops.css
+++ b/css/print_no-crops.css
@@ -120,7 +120,7 @@
 	padding: 0;
 	marks: none;
 	prince-bleed: 3mm;
-	prince-trim: 0;
+	prince-trim: 3mm;
 }
 
 /* Naming our divs for PrinceXML */
